# aisk

./: .gitignore  DEVPLAN.md  README.md  install.sh  pyproject.toml
src/aisk/: aliases.py  cli.py  client.py  completions.py  config.py  output.py
tests/: test_aliases.py  test_cli.py  test_client.py  test_completions.py  test_config.py  test_interactive_init.py  test_output.py
